# tanaka

./: .actrc  .cz.toml  .gitignore  .markdownlint.json  .pre-commit-config.yaml  .prettierignore  .prettierrc.yaml  .pymarkdown.json  .yamllint.yaml  AI-GUIDE.md  CLAUDE.md  LICENSE  Makefile  PRECOMMIT-ENHANCEMENTS.md  PR_DESCRIPTION.md  README.md  README.md.backup  TODO_DOCS_FIX.md  VERSION.md  codecov.yml  package.json  pyproject.toml  scratchpad.md  test-precommit.txt  vetur.config.js
.github/workflows/: benchmark.yml  ci.yml  code-quality.yml
.husky/: commit-msg  lint-shell.sh  pre-commit
.husky/lib/: common.sh  documentation-checker.sh  markdown-checker.sh  python-checker.sh  roadmap-checker.sh  rust-checker.sh  shell-checker.sh  typescript-checker.sh
____extension_old/: .gitignore  .lintstagedrc.mjs  eslint.config.ts  jest.config.js  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rspack.config.ts  tsconfig.json  tsconfig.test.json
____extension_old/scripts/: build.ts  common.ts  dev.ts  tsconfig.json
____extension_old/src/: core.ts
____extension_old/src/__tests__/: background-service.test.ts  permissions-origins.test.ts  permissions.test.ts
____extension_old/src/api/: api.ts
____extension_old/src/browser/: permissions.ts  tabs.ts
____extension_old/src/config/: types.ts
____extension_old/src/error/: types.ts
____extension_old/src/playground-vue/: App.vue  index.html
____extension_old/src/sync/: index.ts  message-handler.ts  user-settings.ts
____extension_old/src/test/: test-container.ts
____extension_old/src/utils/: logger.ts
____extension_old/src/workers/: crdt-worker-client.ts  crdt-worker.ts
docs/: ARCHITECTURE.md  ARCH_REVIEW.md  DESIGN_SYSTEM_SPEC.md  DEV.md  DEVELOPMENT.md  GETTING-STARTED.md  GIT.md  INSTALL.md  MIGRATION-HUSKY-TO-PRECOMMIT.md  MIGRATION-PLAN.md  MIGRATION-STEPS.md  PLAYGROUND.md  ROADMAP-v0.5-v1.0-STEPS.md  ROADMAP-v0.5-v1.0.md  ROADMAP.md  SCSS_AUDIT.md  SCSS_MIGRATION_PLAN.md  SCSS_ROADMAP.md  SERVER-ROADMAP-v1.0-STEPS.md  SERVER-ROADMAP-v1.0.md  STYLING_GUIDE.md  SYNC-PROTOCOL.md  TESTING-UPGRADE.md  TODOS.md  TROUBLESHOOTING.md  UI-REDESIGN.md
docs/__archived/: ARCH_REVIEW.md  EXTENSION_ARCH_REVIEW.md  SERVER_ARCH_REVIEW.md
docs/__archived/extension_reviews_approved/: REVIEW_CHATGPT_APPROVED.md  REVIEW_CLAUDE_DEEP_RESEARCH_APPROVED.md  REVIEW_CLAUDE_OPUS_APPROVED.md  REVIEW_GEMINI_APPROVED.md
docs/__archived/extension_reviews_originals/: REVIEW_CHATGPT.md  REVIEW_CLAUDE_DEEP_RESEARCH.md  REVIEW_CLAUDE_OPUS.md  REVIEW_GEMINI.md
docs/archive/: REORGANIZATION_SUMMARY.md  SCSS_MIGRATION_PHASES_1-2.5.md
extension/: .env.example  .eslintrc.json  .gitignore  .lintstagedrc.js  .lintstagedrc.json  .stylelintrc.json  .swcrc  BUNDLE-ANALYSIS.md  SECURITY-AUDIT.md  backstop_neon.json  backstop_twilight.json  bundle-sizes-before.txt  define.config.mjs  define.config.ts  eslint.config.js  eslint.config.mjs  eslint.config.ts  jest.config.js  jest.config.ts  jest.resolver.cjs  manifest.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.js  pre-migration-metrics.txt  rspack.config.cjs  rspack.config.ts  tsconfig.json  tsconfig.test.json  vite.chrome.config.ts  vite.config.ts  vite.firefox.config.ts  vitest.config.ts
extension/dist-backup-vite/: background.js  background.js.map  browser-polyfill-DMmbowld.js  browser-polyfill-DMmbowld.js.map  index-BoOsyVcS.js  index-BoOsyVcS.js.map  manifest.json
extension/icons/: generate-icons.sh
extension/prototype/: index.html  tanaka-context-menu.html  tanaka-error-states.html  tanaka-onboarding.html  tanaka-window-details.html
extension/prototypes/: index.html  tanaka-context-menu.html  tanaka-empty-states.html  tanaka-error-states.html  tanaka-notifications.html  tanaka-onboarding.html  tanaka-popup-redesign.html  tanaka-settings-redesign.html  tanaka-sync-history.html  tanaka-tab-search.html  tanaka-window-details.html
extension/scripts/: build-stages.ts  build.ts  common.ts  dev.ts  file-utils.ts  launch.ts  process-utils.ts  rspack-utils.ts  stages.ts  stream-utils.ts  vite-utils.ts  watch.ts
extension/src/: THEMES_REFACTORING.md  api.ts  background.ts  core.test.ts  core.ts  env.d.ts  popup.css  popup.html  popup.ts  test-setup.ts  vite-env.d.ts
prototype/v1/: context-menu.html  empty-states.html  index.html  notifications.html  popup.html  settings.html  sync-history.html  tab-search.html
prototype/v2/: .gitignore  INSTRUCTIONS.md  context-menu.html  empty-states.html  error-states.html  index.html  notifications.html  tab-search.html  window-details.html
prototype/v3/: .gitignore  BEM_ICON_MIGRATION.md  COMPONENT-ANALYSIS.md  TODOS-V3.md  backstop.json  design-system.html  index.html  onboarding.html  popup.html  settings.html  sync-history.html  tanaka.js
scripts/: __init__.py  constants.py  logger.py  setup.py  setup.sh  tanaka.py  test_precommit_migration.sh  utils.py
scripts/checkers/: markdown-checker.sh  python-checker.sh  shell-checker.sh  typescript-checker.sh
scripts/pre_commit/: check_documentation.py  quick_mode.py  roadmap_reminder.py  todo_reminder.py
scripts/tasks/: core.py  coverage.py  generate.py  lint.py  setup_dev.py  test_ci.py  test_enhanced.py
server/: .env.example  .gitignore  Cargo.toml  lcov.info
server/benches/: sync_benchmark.rs
server/config/: example.toml
server/coverage/: lcov.info
server/migrations/: 20250706014706_initial_schema.down.sql  20250706014706_initial_schema.up.sql
server/scripts/: generate-api-models.sh  generate-index.sh  utils.sh
server/src/: auth.rs  config.rs  crdt.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  startup.rs  sync.rs  sync_v2.rs
server/src/handlers/: mod.rs  sync.rs
server/src/repository/: mock.rs  mod.rs  tests.rs
server/src/repository/sqlite/: cache.rs  mod.rs  operation.rs  tab.rs  window.rs
server/src/services/: auth.rs  container.rs  mod.rs  sync.rs  tests.rs
server/tests/: README.md  auth_middleware_test.rs  input_validation_test.rs  migration_test.rs  server_persistence_test.rs  sync_integration.rs
(+402 files in other folders)
