[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tanaka"
version = "0.1.0"
description = "Tanaka - Firefox tab synchronization across devices"
requires-python = ">=3.12"

[project.scripts]
tanaka = "scripts.tanaka:main"

[project.optional-dependencies]
dev = ["ruff>=0.1.0", "black>=23.0.0", "mypy>=1.0.0", "pymarkdownlnt>=0.9.0"]

[tool.setuptools]
packages = ["scripts", "scripts.tasks"]
py-modules = []


[tool.uv]
dev-dependencies = [
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
    "pymarkdownlnt>=0.9.0",
]

# Scripts are defined as shell aliases or Makefile targets
# since uv doesn't support [tool.uv.scripts] yet

[tool.ruff]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.black]
line-length = 120
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pymarkdown]
# Disable line length restrictions (MD013)
plugins.line-length.enabled = false

# Configure ordered list style to use incremental numbers (MD029)
plugins.ol-prefix.style = "ordered"

# Disable blank lines around fenced code blocks requirement (MD031)
plugins.blanks-around-fences.enabled = false

# Allow bare URLs (MD034)
plugins.no-bare-urls.enabled = false

# Allow emphasis on its own line (MD036)
plugins.no-emphasis-as-heading.enabled = false

# Don't require language specification for code blocks (MD040)
plugins.fenced-code-language.enabled = false

# Don't require first line to be a top-level heading (MD041)
plugins.first-line-heading.enabled = false
