[package]
name = "tanaka-server"
version = "0.1.0"
edition = "2021"

# Aliases for common commands
[alias]
check-all = "clippy -- -D warnings"
fmt-check = "fmt -- --check"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
# Allow some common patterns
module_name_repetitions = "allow"
must_use_candidate = "allow"
struct_field_names = "allow"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
